2021-02-26
	* VERSION: 1.0.9
	* IMPROVE: add full.document.write.batch.
	* IMPROVE: enable MongoDB unordered bulk write.
	* IMPROVE: create range index instead of hash index when target mongodb
	type is replcaSet.

2021-02-25
	* VERSION: 1.0.8
	* IMPROVE: add pprof.
	* IMPROVE: support parallel scan.

2021-01-28
	* VERSION: 1.0.7
	* BUGFIX: some corner cases.

2021-01-25
	* VERSION: 1.0.6
	* IMPROVE: add metric for both full sync and incr sync.

2020-12-22
	* VERSION: 1.0.5
	* BUGFIX: shard iterator expired based on full sync timeout.

2020-12-18
	* VERSION: 1.0.4
	* BUGFIX: duplicate value fetched in document-syncer.
	* BUGFIX: primary key is not passed to writer.
	* IMPROVE: store N as decimal into mongodb.

2020-10-20
	* VERSION: 1.0.3
	* IMPROVE: support migrating dynamodb meta info.
	* IMPROVE: support migrating gsi and lsi.

2020-07-15
	* VERSION: 1.0.2
	* IMPROVE: support aliyun-dynamo-proxy
	* IMPROVE: add checkpoint address with type file

2019-10-15 Alibaba Cloud.
	* VERSION: 1.0.0
	* FEATURE: first release
