@@ -1,0 +1,8 @@
+package unit_test_common
+
+const (
+	TestUrl                 = "mongodb://100.81.164.186:31881,100.81.164.186:31882,100.81.164.186:31883"
+	TestUrlServerless       = "mongodb://100.81.164.181:32155"
+	TestUrlServerlessTenant = "mongodb://100.81.164.181:36106" // sharding mongos with tenant
+	TestUrlSharding         = "mongodb://100.81.164.181:33010"
+)
